# scraping-togetter

./: .gitignore  pyproject.toml  readme.md
src/: input.json  main_crawl.py  main_parse.py
