[tool.poetry]
name = "scraping-togetter"
version = "0.1.0"
description = ""
authors = ["threecourse"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.16.4"
pandas = "0.24.2"
Scrapy = "^2.5.0"
requests = "^2.26.0"
bs4 = "^0.0.1"
selenium = "^3.141.0"
chromedriver-binary = "92.0.4515.107.0"

[tool.poetry.dev-dependencies]
ipython = "*"
black = "*"
mypy = "*"
isort = "*"
flake8 = "*"
invoke = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3